# image_rotation

./: README.md  service_name  url.txt
src/: CMakeLists.txt  automatic_box.h  rotation_model.cpp
src/alg/include/: rotateInterface.h
